# receptionist_ai

./: .gitignore  README.md  SCREENSHOTS.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  prompts.py  receptionist.py
backend/app/agent/prompts/: __init__.py  base.py  booking_flow.py  customer.py  ui_rules.py  verticals.py
backend/app/agent/toolkits/: booking.py  (+4 more)
backend/app/api/: __init__.py  admin.py  analytics.py  appointments.py  auth.py  business.py  campaigns.py  chat.py  conversations.py  customers.py  faqs.py  insights.py  leads.py  scraper.py  workflows.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  appointment.py  business.py  campaign.py  conversation.py  customer.py  extracted_config.py  lead.py  service.py  staff.py  user.py
backend/app/repositories/: __init__.py  analytics.py  appointments.py  base.py  business.py  campaigns.py  conversations.py  customers.py  leads.py  services.py  staff.py  users.py  waitlist.py  workflows.py
backend/app/services/: __init__.py  calendar.py  config_parser.py  llm_extractor.py  scraper.py
backend/app/tools/: __init__.py  booking.py  business_info.py  customer_info.py  customers.py  leads.py  recommendations.py  workflows.py
backend/config/: settings.yaml
backend/data/: agno_sessions.db  receptionist.db
backend/data/templates/: beauty.yaml  fitness.yaml  medical.yaml  wellness.yaml
backend/static/: chat.js
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_auth.py
(+50 files in other folders)
